Plan/react/dashboard/src/style/style.css
/* ... */
.col-pink {
    color: var(--color-pink);
}

.col-purple {
    color: var(--color-purple);
}

.col-deep-purple {
    color: var(--color-deep-purple);
}

.col-indigo {
    color: var(--color-indigo);
}

.col-blue {
    color: var(--color-blue);
}

.col-light-blue {
    color: var(--color-light-blue);
}

.col-cyan {
    color: var(--color-cyan);
}

.col-teal {
    color: var(--color-teal);
}

.col-green {
    color: var(--color-green);
}

.col-light-green {
    color: var(--color-light-green);
}

.col-lime {
    color: var(--color-lime);
}

.col-yellow {
    color: var(--color-yellow);
}

.col-amber {
    color: var(--color-amber);
}

.col-orange {
    color: var(--color-orange);
}

.col-deep-orange {
    color: var(--color-deep-orange);
}

.col-brown {
    color: var(--color-brown);
}

.col-grey {
    color: var(--color-grey);
}

.col-blue-grey {
    color: var(--color-blue-grey);
}

.col-black {
    color: var(--color-black);
}

.col-white {
    color: #ffffff;
}

.col-plan {
    color: var(--color-plan);
}

.col-theme {
    color: var(--color-themeText);
}

.col-text {
    color: var(--color-text);
}

button.col-theme:hover, a.col-theme:hover {
    color: color-mix(in srgb, var(--color-themeText) 60%, var(--contrast-color-themeText))
}

.italic {
    font-style: italic;
}

.bold {
    font-weight: bolder;
}

.underline {
    text-decoration: underline;
}

.strikethrough {
    text-decoration: line-through;
}

/*
Fix table colors not applying properly due to bootstrap.
*/
.table > :not(caption) > * > * {
    color: inherit;
    background-color: inherit;
}

/*
Adding a translation, even though it doesn't visually
impact the page, causes child elements with a
position of "fixed" to be based on this element
instead of any other parent elements. For example,
if a child element to this element had `top: 0`
and `left: 0`, then it would align with the top
left of this element instead of another parent or the document body.
See this StackOverflow answer: https://stackoverflow.com/a/20830413

We use this to properly align the popover when there are more
than 3 events in one day on the sessions calendar.
 */
#sessions-overview {
    transform: translateX(0);
}

body.sidebar-hidden .navbar-nav {
    display: none;
}

.filter-remover {
    height: 2.4rem;
    width: 2.4rem;
    padding: 0;
}

.query-buttons {
    display: none;
}

.contributors li {
    padding: 0;
}

#filter-dropdown {
    max-height: 18rem;
    overflow-y: scroll;
}

.refresh-element {
    font-size: 1rem;
}

.refresh-element > i {
    cursor: pointer;
}

.sorting, .sorting_desc, .sorting_asc {
    cursor: pointer;
}

.dataTables_length, .dataTables_filter, .dataTables_paginate {
    padding: 0.5rem;
    margin: 0;
}

.dataTables_columns {
    padding-top: 0.5rem;
    margin: 0;
}

.dataTables_info {
    padding: 1rem;
    padding-left: 0.5rem;
    margin: 0;
}

.datatable thead button {
    width: 100%;
    margin: 0;
    text-align: left;
}

.sidebar .nav-item .collapse {
    z-index: 2;
}

.container, .container-fluid, .container-sm, .container-md, .container-lg, .container-xl {
    padding-left: 1.5rem;
    padding-right: 1.5rem;
}

.topbar-divider {
    width: 0;
    border-right: 1px solid #e3e6f0;
    height: calc(4.375rem - 2rem);
    margin: auto 1rem;
}

@media (max-width: 660px) {
    .topbar-divider {
        display: none;
    }

    .refresh-element {
        margin-left: 1rem;
    }
}

@media (max-width: 400px) {
    td, th {
        font-size: 12px;
        padding: 0.3rem !important;
    }

    .card-body p + p {
        margin-top: 0.75rem;
    }

    p {
        font-size: 12px;
    }
}

.collapse-item.nav-button {
    overflow: hidden;
    text-overflow: ellipsis;
}

button, input[type="submit"], input[type="reset"] {
    background: none;
    color: inherit;
    border: none;
    padding: 0;
    font: inherit;
    cursor: pointer;
    outline: inherit;
}

.login-username {
    position: relative;
    top: 0.1rem;
}

.dataTables_filter input {
    /* Fixes datatables search bar going outside cards */
    width: calc(100% - 3.7rem) !important;
}

ul.filters {
    list-style: none;
    padding: 0;
}

#wrapper {
    display: flex;
    min-height: 100vh;
    background-image: linear-gradient(to right, var(--color-theme) 0%, var(--color-theme) 14rem, var(--color-layout-background) 14.01rem, var(--color-layout-background) 100%);
}

.contributor {
    width: 33%;
}

.extension-table-header {
    cursor: pointer;
}

.opaque-text {
    opacity: 0.4;
}

.opaque-text:hover {
    opacity: 1;
}

@keyframes alert-timer {
    from {
        width: 100%
    }
    to {
        width: 0
    }
}

.group-help i {
    color: var(--color-plan)
}

.nav-item.disabled {
    opacity: 30%;
}

.link {
    color: var(--bs-link-color);
    opacity: var(--bs-link-opacity);
    text-decoration: underline;
}

.link:hover {
    color: var(--bs-link-hover-color)
}

.card-header .btn.float-end {
    margin-top: -0.5rem;
}

/* Fix vertical alignment of dropdown toggle arrow */
.dropdown-toggle {
    height: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
}

